--- a/SimpleToDo/res/values/strings.xml
+++ b/SimpleToDo/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ToDoActivity</string>
-    <string name="title_activity_edit_to_do">EditToDoActivity</string>
+    <string name="app_name">Simple ToDo</string>
+    <string name="title_activity_edit_to_do">Edit Item</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
